<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:onClick="onBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="VectorDrawableCompat, ContentDescription" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <Button
        android:id="@+id/button17"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_bg"
        android:onClick="onEnd"
        android:textColor="@color/white"
        android:text="@string/run_again"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button18"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_bg"
        android:onClick="onInspireFb"
        android:text="@string/inspire"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button17"
        app:layout_constraintStart_toStartOf="@+id/button17" />

    <Button
        android:id="@+id/button19"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:textColor="@color/white"
        android:onClick="onCreatorFb"
        android:layout_marginBottom="6dp"
        android:text="@string/creator"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toTopOf="@+id/button17"
        app:layout_constraintEnd_toEndOf="@+id/button17" />

</androidx.constraintlayout.widget.ConstraintLayout>